2004-04-30  Dan Winship  <danw@ximian.com>

	* e-icon-factory.c (load_icon): Make this work for non-stock icons
	too.

2004-04-22  Not Zed  <NotZed@Ximian.com>

	* e-icon-factory.c (e_icon_factory_get_icon_list): make sure we
	unlock if we fail to find an icon.

2004-04-21  Jeffrey Stedfast  <fejj@ximian.com>

	* e-icon-factory.c: Remove the warnings about using E_ICON_SIZE
	enums.

2004-04-20  Jeffrey Stedfast  <fejj@ximian.com>

	* e-icon-factory.c (e_icon_factory_get_icon): Make
	thread-safe. Fixes a crash I encountered this morning.
	(e_icon_factory_get_icon_filename): Same.
	(e_icon_factory_get_icon_list): Here too.

2004-04-19  Jeffrey Stedfast  <fejj@ximian.com>

	* e-icon-factory.h: Add an enum for icon sizes (temporarily has
	absolute pixel sizes assigned to it until I commit
	e-icon-factory.c changes - but only after all other code has been
	updated to use the enums).

2004-04-16  Michael Terry  <mike@mterry.name>

	* Makefile.am: Add e-icon-factory.[ch]
	* e-gui-utils.c: Use the icon theme via EIconFactory
	* e-icon-factory.[ch]: Move EIconFactory to e-util, and add icon theme
	support to the object so evolution uses them

2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>

	* e-signature-list.c (gconf_signatures_changed): Don't add an
	autogen signature if the new signature is the autogen signature.

2004-04-13  Jeffrey Stedfast  <fejj@ximian.com>

	* e-host-utils.c (e_gethostbyname_r): Implemented a similar
	workaround to the one I did for a gethostbyaddr_r() glibc bug
	here. Glibc will apparently return success for addresses such as
	"192..168.1.1" (note the double dot) and yet not have filled in
	the hostent properly.

2004-04-12  Jeffrey Stedfast  <fejj@ximian.com>

	Really fixes bug #56623

	* e-signature-list.c (gconf_signatures_changed): If we've had to
	"fix" any signatures by adding a uid, set the resave state on the
	list (only cared about if this is at initial load time).
	(e_signature_list_construct): If we've set any uids in